feat: create get list rent payments api endpoint
